--- a/fee-banners.html
+++ b/fee-banners.html
@@ -31,7 +31,7 @@
 							<a href="https://docuhub.t2themes.com/tag/advanced-usage/"><span class="tag-name">III. Advanced Usage</span></a>
 						</li>
 						<li id="tag-5d6872a07c4e0b0409732b66">
-							<a href="./fee-banners.html"><span class="tag-name">Fee Banners</span></a>
+							<a href="https://docuhub.t2themes.com/tag/writing-posts-and-pages/"><span class="tag-name">IV. Writing posts and pages</span></a>
 						</li>
 						<li id="tag-5d6872a07c4e0b0409732b67">
 							<a href="https://docuhub.t2themes.com/tag/website-configuration/"><span class="tag-name">V. Website Configuration</span></a>
