--- a/gazettes.html
+++ b/gazettes.html
@@ -50,12 +50,12 @@
 			<section class="container-xl pb-lg-4 px-3 px-md-6">
 				<div class="article-grid-head">
 					<div class="d-flex flex-items-baseline flex-justify-between mt-3">
-						<h1 class="border-bottom-0 mt-2">দলিল ফিসের ব্যানার ও বোর্ড</h1>
+						<h1 class="border-bottom-0 mt-2">আইন ও বিধিমালা</h1>
 					</div>
 
 
 					<div class="lead-mktg">
-						<p>দলিল রেজিস্ট্রেশন সম্পর্কিত ফিসের ব্যানার ও নাগরিক সনদ সমূহের গুগল ড্রাইভ লিংকঃ</p>
+						<p>দলিল রেজিস্ট্রেশন ও সম্পত্তি হস্তান্তর সম্পর্কিত আইন, বিধিমালা ও পরিপত্র সমূহের গুগল ড্রাইভ লিংকঃ</p>
 					</div>
 				</div>
 
@@ -66,7 +66,7 @@
 
 					<div class="d-flex flex-wrap gutter gutter-xl-spacious">
 						<div class="d-flex flex-column col-12 pb-4">
-							<iframe src="https://drive.google.com/embeddedfolderview?id=1GQms1d5ZZFfQeXFGjqqU4rwyl4RV2Y48#list" style="width:100%; height:600px; border:0;"></iframe>
+							<iframe src="https://drive.google.com/embeddedfolderview?id=1sFjK29LQmQilybxANpW6ObPUcdkX-Mwj#list" style="width:100%; height:600px; border:0;"></iframe>
 						</div>
 					</div>
 				</div>
