--- a/khotian.html
+++ b/khotian.html
@@ -40,9 +40,9 @@
 		<div id="page-content-wrapper">
 			<div class="d-block d-md-none">
 				<div class="d-flex flex-items-center p-4 position-sticky top-0" id="github-logo" role="banner" style="background: #2160ba;">
-					<a aria-hidden="true" class="text-white" href="./index.html" tabindex="-1"><svg aria-hidden="true" class="octicon octicon-mark-github" height="32" version="1.1" viewbox="0 0 16 16" width="32">
+					<a aria-hidden="true" class="text-white" href="/en" tabindex="-1"><svg aria-hidden="true" class="octicon octicon-mark-github" height="32" version="1.1" viewbox="0 0 16 16" width="32">
 					<path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z" fill-rule="evenodd">
-					</path></svg></a> <a class="h4-mktg text-white no-underline no-wrap pl-2 flex-auto" href="./index.html">Dolil Docs</a>
+					</path></svg></a> <a class="h4-mktg text-white no-underline no-wrap pl-2 flex-auto" href="/en">Dolil Docs</a>
 				</div>
 			</div>
 
@@ -50,12 +50,12 @@
 			<section class="container-xl pb-lg-4 px-3 px-md-6">
 				<div class="article-grid-head">
 					<div class="d-flex flex-items-baseline flex-justify-between mt-3">
-						<h1 class="border-bottom-0 mt-2">দলিল ফিসের ব্যানার ও বোর্ড</h1>
+						<h1 class="border-bottom-0 mt-2">খতিয়ান সমূহ</h1>
 					</div>
 
 
 					<div class="lead-mktg">
-						<p>দলিল রেজিস্ট্রেশন সম্পর্কিত ফিসের ব্যানার ও নাগরিক সনদ সমূহের গুগল ড্রাইভ লিংকঃ</p>
+						<p>DRR ওয়েবসাইট থেকে ডাউনলোডকৃত ভিবিন্ন এলাকার খতিয়ান সমূহের গুগল ড্রাইভ লিংকঃ</p>
 					</div>
 				</div>
 
@@ -66,7 +66,7 @@
 
 					<div class="d-flex flex-wrap gutter gutter-xl-spacious">
 						<div class="d-flex flex-column col-12 pb-4">
-							<iframe src="https://drive.google.com/embeddedfolderview?id=1GQms1d5ZZFfQeXFGjqqU4rwyl4RV2Y48#list" style="width:100%; height:600px; border:0;"></iframe>
+							<iframe src="https://drive.google.com/embeddedfolderview?id=1FRi1ErmLPnTg5UNorm9KhcPboSPx0aaM#list" style="width:100%; height:600px; border:0;"></iframe>
 						</div>
 					</div>
 				</div>
