--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 						<div class="col-lg-5 mt-6">
 							<h1 class="h1-mktg mb-3">Need help?</h1>
 							<div class="lead-mktg">
-								<p>A resurce website for Sub-registrar's. A collection of resources for office management.</p>
+								<p>A resurce website for Sub-registrar's. Collection of resources for office management.</p>
 							</div>
 						</div>
 						
