--- a/khotian.html
+++ b/khotian.html
@@ -55,7 +55,7 @@
 
 
 					<div class="lead-mktg">
-						<p>DRR ওয়েবসাইট থেকে ডাউনলোডকৃত ভিবিন্ন এলাকার খতিয়ান সমূহের গুগল ড্রাইভ লিংকঃ</p>
+						<p>drr.land.gov.bd ওয়েবসাইট থেকে ডাউনলোডকৃত  বিভিন্ন এলাকার খতিয়ান সমূহের গুগল ড্রাইভ লিংকঃ</p>
 					</div>
 				</div>
 
