--- a/gazettes.html
+++ b/gazettes.html
@@ -30,7 +30,7 @@
 
 
 			<div class="list-group list-group-flush d-flex flex-items-center p-4 position-sticky top-0 sidebar-background-color">
-				<a class="list-group-item list-group-item-action" href="./index.html">Dashboard</a> <a class="list-group-item list-group-item-action" href="./gazettes.html">আইন ও বিধিমালা</a> <a class="list-group-item list-group-item-action" href="./fee-banners.html">ফিস ব্যানার </a> <a class="list-group-item list-group-item-action" href="./deed-format.html">দলিলের ফরম্যাট</a> <a class="list-group-item list-group-item-action" href="./office-file.html">অফিস ফাইল</a> <a class="list-group-item list-group-item-action" href="./khotian.html">খতিয়ান সমূহ</a>
+				<a class="list-group-item list-group-item-action" href="./index.html">হোম</a> <a class="list-group-item list-group-item-action" href="./gazettes.html">আইন ও বিধিমালা</a> <a class="list-group-item list-group-item-action" href="./fee-banners.html">ফিস ব্যানার </a> <a class="list-group-item list-group-item-action" href="./deed-format.html">দলিলের ফরম্যাট</a> <a class="list-group-item list-group-item-action" href="./office-file.html">অফিস ফাইল</a> <a class="list-group-item list-group-item-action" href="./khotian.html">খতিয়ান সমূহ</a>
 			</div>
 		</div>
 		<!-- /#sidebar-wrapper -->
