--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 	<meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
 	<meta content="" name="description">
 	<meta content="" name="author">
+	<link rel="mask-icon" href="https://github.githubassets.com/pinned-octocat.svg" color="#000000">
+	<link rel="alternate icon" class="js-site-favicon" type="image/png" href="https://github.githubassets.com/favicons/favicon.png">
+	<link rel="icon" class="js-site-favicon" type="image/svg+xml" href="https://github.githubassets.com/favicons/favicon.svg">
 
 	<title>Dolil Docs - A resource website for Sub-registrar's</title>
+	
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Custom styles for this template -->
