--- a/deed-format.html
+++ b/deed-format.html
@@ -53,7 +53,7 @@
 			<section class="container-xl pb-lg-4 px-3 px-md-6">
 				<div class="article-grid-head">
 					<div class="d-flex flex-items-baseline flex-justify-between mt-3">
-						<h1 class="border-bottom-0 mt-2">দললের ফরম্যাট</h1>
+						<h1 class="border-bottom-0 mt-2">দলিলের ফরম্যাট</h1>
 					</div>
 
 
